[package]
name = "kasten"
version = "0.1.0"
authors = ["Fausto Núñez Alberro <fausto.nunez@mailbox.org>"]
edition = "2018"
description = "A journaling tool with support for linking entries, which can be used to create a Zettelkasten."
license = "MIT"
repository = "git@github.com:fnune/kasten.git"
documentation = "https://github.com/fnune/kasten"

[dependencies]
